# tp_aeds2

./: CMakeLists.txt  README.md  arquivo1.txt  arquivo3.txt  hash.c  hash.cpp  hash.h  input.txt  main.c  mainAux.c  mainAux.h  patricia.c  separacaoString.c
estruturas/: includes.h
estruturas/docs/: docs.c  docs.h
estruturas/hash/: hash.c  hash.h  hashlist.c  hashlist.h
estruturas/invIndex/: invIndex.c  invIndex.h
estruturas/patricia/: patricia.c  patricia.h  patriciaTests.c
